# anomaly-detection-cpp

./: CMakeLists.txt  README.md
lib/: algorithm.h
lib/algorithms/: iqr.h  iqr.hpp  knn.h
lib/utils/: distance.h  quartile_calculator.h  search_algorithm.h
lib/utils/distances/: chebyshev.h  euclidean.h  manhattan.h  minkowski.h
lib/utils/search_algorithm/: bruteforce.h  kdtree.h
src/: main.cpp
src/algorithms/: iqr.cpp  knn.cpp
src/utils/: quartile_calculator.cpp
src/utils/distances/: chebyshev.cpp  euclidean.cpp  manhattan.cpp  minkowski.cpp
src/utils/search_algorithm/: bruteforce.cpp  kdtree.cpp
tests/: distance_test.cpp  quartile_calc_test.cpp  search_algorithm_test.cpp
